# MinimizeYTM

./: Cargo.toml  README.md
.github/: copilot-instructions.md
src/: audio.rs  icon.rs  main.rs  toast.rs  tray.rs  tray_icon.rs  window.rs
