[package]
name = "MinimizeYTM"
version = "0.2.0"
edition = "2024"

[dependencies]
regex = "1"
windows-sys = { version = "0.61.2", features = [
	"Win32_Foundation",
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_System_LibraryLoader",
	"Win32_System_Threading",
	"Win32_UI_Shell",
	"Win32_UI_WindowsAndMessaging",
] }
