[package]
name = "MinimizeYTM"
version = "0.2.0"
edition = "2024"

[dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Media_Audio",
    "Media_Control",
    "Storage_Streams",
    "UI_Notifications",
    "Data_Xml_Dom",
	"Win32_Foundation",
	"Win32_UI_WindowsAndMessaging",
	"Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_Storage_EnhancedStorage",
	"Win32_UI_Input_KeyboardAndMouse",
] }
thiserror = "2"